Fix overflow issue on User.

--- a/src/client/css/user.less
+++ b/src/client/css/user.less
@@ -7,7 +7,14 @@ div.user {
     border-radius: 5px;
     padding: 5px;
     div.user-name {
+        display: flex;
+        span.user-name-text {
+            flex: auto;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
         span.user-name-label {
+            flex: none;
             margin-left: 0.5em;
             font-size: 0.8em;
             color: gray;
